overlays/prod/apps/home-assistant/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: home-assistant
  namespace: apps
  labels:
    k8s-app: home-assistant
spec:
  selector:
    matchLabels:
      name: home-assistant
  template:
    metadata:
      labels:
        name: home-assistant
    spec:
      hostNetwork: true
      tolerations:
      # these tolerations are to have the daemonset runnable on control plane nodes
      # remove them if your control plane nodes should not run pods
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      - key: node-role.kubernetes.io/master
        operator: Exists
        effect: NoSchedule
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        ports:
        - containerPort: 8123
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8123
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /config
          name: hass-config
        - name: hass-tls
          mountPath: /etc/letsencrypt/
          readOnly: true
      - name: node-red
        image: nodered/node-red
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        ports:
        - containerPort: 1880
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 1880
          timeoutSeconds: 1
        volumeMounts:
        - name: node-red-data
          mountPath: /data
        - name: node-red-tls
          mountPath: /etc/letsencrypt/
          readOnly: true
      - name: vscode
        image: codercom/code-server:3.11.1
        imagePullPolicy: IfNotPresent
        workingDir: /config
        args:
          - --port=8124
          - --extensions-dir=/config/.vscode
          - --user-data-dir=/config/.vscode
        ports:
          - name: vscode
            containerPort: 8124
            protocol: TCP
        volumeMounts:
        - mountPath: /hass-config
          name: hass-config
        - mountPath: /node-red-data
          name: node-red-data
        securityContext:
            runAsUser: 0
      - name: frigate
        image: blakeblackshear/frigate:stable-amd64
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        - containerPort: 1935
          name: rtmp
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 5000
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /media
          name: frigate-media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: hass-config
        persistentVolumeClaim:
          claimName: home-assistant-config
      - name: hass-tls 
        secret:
          secretName: home-assistant-tls
      - name: node-red-data
        persistentVolumeClaim:
          claimName: node-red-data
      - name: node-red-tls 
        secret:
          secretName: node-red-tls
      - name: frigate-media
        persistentVolumeClaim:
          claimName: frigate-media
      - name: frigate-tmp
        emptyDir:
          medium: Memory
          sizeLimit: 8Gi
