overlays/prod/apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: home-assistant
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "simplefxn-issuer"

spec:
  tls:
  - hosts:
    - home-assistant.simplefxn.com
    secretName: home-assistant-simplefxn-tls
  rules:
  - host: home-assistant.simplefxn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 8123
